# devot_application

./: README.md  my_database.db
budget-app/: initialize_db.py  main.py  models.py
budget-app/api_models/: category.py  file.py  folder.py  user.py
budget-app/db/: __init__.py  bill.py  category.py  database.py  folder.py  user.py
budget-app/routers/: categories_router.py  expenses_router.py  files_router.py  folders_router.py  user_router.py
budget-app/tests/: test_categories_router.py
file_manager_app/: constants.py  main.py  pyproject.toml
file_manager_app/api_models/: folder.py
file_manager_app/db/: file.py
file_manager_app/routers/: auth.py  files_router.py  folders_router.py
file_manager_app/tests/: conftest.py  test_categories_router.py
